# physical-ai-robotics-book

./: .gitignore  404.html  CNAME  Dmy-hackathonbook-website.gitignore  IMPLEMENTATION_STATUS.md  QWEN.md  QWEN_README.md  index.html  sitemap.xml
.claude/: settings.local.json
.qwen/: settings.local.json
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/scripts/: db_helper.py
backend/src/: config.py  main.py  utils.py
backend/src/agents/: __init__.py  agents_config.py  answer_tutor_agent.py  coordinator.py  rag_agent.py  safety_guardian.py  tone_agent.py  tone_prompts.py
backend/src/api/: __init__.py  middleware.py  routes.py
backend/src/models/: api_key_quota.py  conversation.py  database.py  embeddings_metadata.py
backend/src/services/: conversation_service.py  gemini_service.py  orchestration_service.py  qdrant_service.py
backend/tests/: conftest.py
backend/tests/e2e/: test_conversation_history.py  test_full_chat_flow.py  test_tone_parameter.py
backend/tests/integration/: test_fallback_message.py  test_multi_turn_context.py  test_orchestrator_pipeline.py  test_safety_guardian.py  test_session_isolation.py  test_tone_switching.py
backend/tests/unit/: test_answer_tutor_agent.py  test_answer_tutor_agent_context.py  test_api_key_rotation.py  test_conversation_history.py  test_conversation_service.py  test_gemini_service.py  test_hallucination_scenarios.py  test_orchestration_service.py  test_qdrant_service.py  test_quota_reset.py  test_rag_agent.py  test_safety_guardian.py  test_tone_agent.py  test_tone_agent_concise.py
blog/: atom.xml  index.html  rss.xml
blog/tags/: index.html
book-website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
frontend/: package-lock.json  package.json  vite.config.ts
(+265 files in other folders)
